# oxide

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ActivationScreen.tsx  Knob.tsx  ModeSelector.tsx  OxideVisualizer.tsx  PresetSelector.tsx  Slider.tsx
web-ui/src/hooks/: useVisualizerData.ts
